--- a/assets/css/templatemo-lava.css
+++ b/assets/css/templatemo-lava.css
@@ -32,10 +32,65 @@ font & reset css
 reset
 --------------------------------------------- 
 */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
-pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
-s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-figure, header, nav, section, article, aside, footer, figcaption {
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+div pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+figure,
+header,
+nav,
+section,
+article,
+aside,
+footer,
+figcaption {
   margin: 0;
   padding: 0;
   border: 0;
@@ -63,13 +118,20 @@ html[xmlns] .clearfix {
   height: 1%;
 }
 
-ul, li {
+ul,
+li {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-header, nav, section, article, aside, footer, hgroup {
+header,
+nav,
+section,
+article,
+aside,
+footer,
+hgroup {
   display: block;
 }
 
@@ -77,8 +139,9 @@ header, nav, section, article, aside, footer, hgroup {
   box-sizing: border-box;
 }
 
-html, body {
-  font-family: 'Poppins', sans-serif;
+html,
+body {
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   background-color: #fff;
   font-size: 16px;
@@ -91,7 +154,12 @@ a {
   text-decoration: none !important;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -111,10 +179,11 @@ p {
 global styles
 --------------------------------------------- 
 */
+
 html,
 body {
   background: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 ::selection {
@@ -126,9 +195,15 @@ body {
   background: #f1556a;
   color: #fff;
 }
-
+.bottom__Menu {
+  display: none;
+}
+.main-button {
+  margin-top: -50px;
+}
 @media (max-width: 991px) {
-  html, body {
+  html,
+  body {
     overflow-x: hidden;
   }
   .mobile-top-fix {
@@ -147,7 +222,7 @@ a.main-button-slider {
   font-size: 14px;
   border-radius: 25px;
   padding: 15px 25px;
-  background-color: #6C63FF;
+  background-color: #6c63ff;
   text-transform: uppercase;
   color: #fff;
   font-weight: 600;
@@ -166,7 +241,7 @@ a.main-button {
   font-size: 14px;
   border-radius: 25px;
   padding: 15px 25px;
-  background-color: #6C63FF;
+  background-color: #6c63ff;
   text-transform: uppercase;
   color: #fff;
   font-weight: 600;
@@ -188,7 +263,7 @@ button.main-button {
   font-size: 14px;
   border-radius: 25px;
   padding: 15px 25px;
-  background-color: #6C63FF;
+  background-color: #6c63ff;
   text-transform: uppercase;
   color: #fff;
   font-weight: 600;
@@ -202,7 +277,6 @@ button.main-button {
 button.main-button:hover {
   background-color: #f1556a;
 }
-
 
 .center-heading {
   margin-bottom: 70px;
@@ -219,7 +293,7 @@ button.main-button:hover {
 
 .center-heading h2 em {
   font-style: normal;
-  color: #6C63FF;
+  color: #6c63ff;
 }
 
 .center-heading p {
@@ -227,7 +301,6 @@ button.main-button:hover {
   color: #888;
   text-align: center;
 }
-
 
 /* 
 ---------------------------------------------
@@ -237,25 +310,25 @@ header
 
 .background-header {
   background-color: #fff;
-  height: 80px!important;
-  position: fixed!important;
+  height: 80px !important;
+  position: fixed !important;
   top: 0px;
   left: 0px;
   right: 0px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.15)!important;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15) !important;
 }
 
 .background-header .logo,
 .background-header .main-nav .nav li a {
-  color: #1e1e1e!important;
+  color: #1e1e1e !important;
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #6C63FF!important;
+  color: #6c63ff !important;
 }
 
 .background-header .nav li a.active {
-  color: #6C63FF!important;
+  color: #6c63ff !important;
 }
 
 .header-area {
@@ -265,10 +338,10 @@ header
   right: 0px;
   z-index: 100;
   height: 100px;
-  -webkit-transition: all .5s ease 0s;
-  -moz-transition: all .5s ease 0s;
-  -o-transition: all .5s ease 0s;
-  transition: all .5s ease 0s;
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header-area .main-nav {
@@ -289,7 +362,6 @@ header
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
-
 
 .header-area .main-nav .nav {
   float: left;
@@ -332,7 +404,7 @@ header
 }
 
 .header-area .main-nav .nav li:hover a {
-  color: #6C63FF;
+  color: #6c63ff;
 }
 
 .header-area .main-nav .nav li.submenu {
@@ -360,7 +432,8 @@ header
   transform: translateY(-2em);
   visibility: hidden;
   z-index: -1;
-  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s,
+    z-index 0s linear 0.01s;
 }
 
 .header-area .main-nav .nav li.submenu ul li {
@@ -372,7 +445,7 @@ header
 .header-area .main-nav .nav li.submenu ul li a {
   display: block;
   background: #fff;
-  color: #7a7a7a!important;
+  color: #7a7a7a !important;
   padding-left: 20px;
   height: 40px;
   line-height: 40px;
@@ -386,7 +459,7 @@ header
 }
 
 .header-area .main-nav .nav li.submenu ul li a:before {
-  content: '';
+  content: "";
   position: absolute;
   width: 0px;
   height: 40px;
@@ -397,12 +470,12 @@ header
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
-  background: #6C63FF;
+  background: #6c63ff;
 }
 
 .header-area .main-nav .nav li.submenu ul li a:hover {
   background: #fff;
-  color: #6C63FF!important;
+  color: #6c63ff !important;
   padding-left: 25px;
 }
 
@@ -538,9 +611,23 @@ header
 }
 
 .header-area.header-sticky .nav li a.active {
-  color: #6C63FF;
+  color: #6c63ff;
+}
+.dark-mode {
+  transition: 1s;
+  background-color: #000;
 }
 
+.text__warna {
+  color: white !important;
+}
+
+#fitur-dark {
+  cursor: pointer;
+}
+.tranparent__backNav {
+  background-color: transparent !important;
+}
 @media (max-width: 1200px) {
   .header-area .main-nav .nav li {
     padding-left: 12px;
@@ -554,7 +641,7 @@ header
 @media (max-width: 991px) {
   .logo {
     text-align: center;
-    float: none!important;
+    float: none !important;
   }
   .header-area {
     background-color: #f7f7f7;
@@ -606,7 +693,7 @@ header
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
-    color: #6C63FF!important;
+    color: #6c63ff !important;
   }
   .header-area .main-nav .nav li.submenu ul {
     position: relative;
@@ -631,12 +718,13 @@ header
     height: auto !important;
   }
   .header-area .main-nav .nav li.submenu:after {
-    color: #3B566E;
+    color: #3b566e;
     right: 25px;
     font-size: 14px;
     top: 15px;
   }
-  .header-area .main-nav .nav li.submenu:hover ul, .header-area .main-nav .nav li.submenu:focus ul {
+  .header-area .main-nav .nav li.submenu:hover ul,
+  .header-area .main-nav .nav li.submenu:focus ul {
     height: 0px;
   }
 }
@@ -646,7 +734,6 @@ header
     display: flex !important;
   }
 }
-
 
 /* 
 ---------------------------------------------
@@ -680,7 +767,7 @@ welcome
 
 .welcome-area .header-text h1 em {
   font-style: normal;
-  color: #6C63FF;
+  color: #6c63ff;
 }
 
 .welcome-area .header-text p {
@@ -714,7 +801,7 @@ welcome
   .welcome-area {
     height: auto;
   }
-  .welcome-area .header-text {       
+  .welcome-area .header-text {
     width: 92%;
     padding-top: 793px;
   }
@@ -732,7 +819,7 @@ welcome
     padding-top: 100%;
     margin-left: 0;
   }
-    
+
   .container-fluid .col-md-12 {
     margin-right: 0px;
     padding-right: 0px;
@@ -761,7 +848,7 @@ about
   border-radius: 5px;
   padding: 60px 30px;
   text-align: center;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .features-item h2 {
@@ -792,7 +879,6 @@ about
   margin-top: 35px;
   display: inline-block;
 }
-
 
 /*
 ---------------------------------------------
@@ -845,7 +931,6 @@ promotion
   margin-top: 3px;
 }
 
-
 /*
 --------------------------------------------
 testimonials
@@ -873,8 +958,12 @@ testimonials
 }
 
 #testimonials .item .testimonial-content {
-  background: rgb(244,129,63);
-  background: linear-gradient(145deg, rgba(244,129,63,1) 0%, rgba(241,85,106,1) 100%);
+  background: rgb(244, 129, 63);
+  background: linear-gradient(
+    145deg,
+    rgba(244, 129, 63, 1) 0%,
+    rgba(241, 85, 106, 1) 100%
+  );
   margin-left: 60px;
   padding: 40px 30px;
   text-align: center;
@@ -927,8 +1016,12 @@ testimonials
   line-height: 80px;
   text-align: center;
   display: inline-block;
-  background: rgb(244,129,63);
-  background: linear-gradient(145deg, rgba(244,129,63,1) 0%, rgba(241,85,106,1) 100%);
+  background: rgb(244, 129, 63);
+  background: linear-gradient(
+    145deg,
+    rgba(244, 129, 63, 1) 0%,
+    rgba(241, 85, 106, 1) 100%
+  );
   position: absolute;
 }
 
@@ -944,14 +1037,18 @@ testimonials
   line-height: 80px;
   text-align: center;
   display: inline-block;
-  background: rgb(244,129,63);
-  background: linear-gradient(145deg, rgba(244,129,63,1) 0%, rgba(241,85,106,1) 100%);
+  background: rgb(244, 129, 63);
+  background: linear-gradient(
+    145deg,
+    rgba(244, 129, 63, 1) 0%,
+    rgba(241, 85, 106, 1) 100%
+  );
   position: absolute;
 }
 
 @media screen and (max-width: 1060px) {
   .owl-carousel .owl-nav {
-    display: none!important;
+    display: none !important;
   }
 }
 
@@ -963,8 +1060,8 @@ footer
 
 @media (max-width: 992px) {
   footer {
-    padding-top: 0px!important;
-    margin-top: 0px!important;
+    padding-top: 0px !important;
+    margin-top: 0px !important;
   }
   .contact-form {
     margin-bottom: 45px;
@@ -973,7 +1070,7 @@ footer
     text-align: center;
   }
   footer .footer-content {
-    padding: 60px 0px!important;
+    padding: 60px 0px !important;
   }
 }
 
@@ -997,8 +1094,7 @@ footer .footer-content {
   padding: 45px;
   border-radius: 5px;
   background-color: #fff;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-  
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 footer .right-content {
@@ -1033,11 +1129,13 @@ footer .right-content {
   text-align: center;
 }
 
-.contact-form ::-webkit-input-placeholder { /* Edge */
+.contact-form ::-webkit-input-placeholder {
+  /* Edge */
   color: #7a7a7a;
 }
 
-.contact-form :-ms-input-placeholder { /* Internet Explorer 10-11 */
+.contact-form :-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
   color: #7a7a7a;
 }
 
@@ -1064,15 +1162,15 @@ footer .right-content {
 }
 
 .footer-content .right-content p {
-  color: #FFF;
+  color: #fff;
 }
 
 .footer-content .right-content a {
-  color: #FFF;
+  color: #fff;
 }
 
 .footer-content .right-content a:hover {
-  color: #FC3;
+  color: #fc3;
 }
 
 footer .social {
@@ -1107,8 +1205,8 @@ footer .social li a {
 }
 
 footer .social li a:hover {
-  background-color: #6C63FF;
-  border-color: #6C63FF;
+  background-color: #6c63ff;
+  border-color: #6c63ff;
   color: #fff;
 }
 
@@ -1123,16 +1221,16 @@ footer .copyright {
 
 footer .sub-footer {
   padding: 60px 0px;
-  border-top: 1px solid rgba(250,250,250,0.3);
+  border-top: 1px solid rgba(250, 250, 250, 0.3);
   text-align: center;
 }
 
 footer .sub-footer a {
-	color: #FFF;
+  color: #fff;
 }
 
 footer .sub-footer a:hover {
-	color: #FC3;
+  color: #fc3;
 }
 
 footer .sub-footer p {
@@ -1150,87 +1248,53 @@ footer .sub-footer p {
     text-align: center;
   }
 }
-
-/* 
----------------------------------------------
-preloader
---------------------------------------------- 
-*/
-#preloader {
-  overflow: hidden;
-  background-image: linear-gradient(145deg, #6C63FF 0%, #f1556a 100%);
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  position: fixed;
-  z-index: 9999;
-  color: #fff;
-}
-
-#preloader .jumper {
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  display: block;
-  position: absolute;
-  margin: auto;
-  width: 50px;
-  height: 50px;
-}
-
-#preloader .jumper > div {
-  background-color: #fff;
-  width: 10px;
-  height: 10px;
-  border-radius: 100%;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  position: absolute;
-  opacity: 0;
-  width: 50px;
-  height: 50px;
-  -webkit-animation: jumper 1s 0s linear infinite;
-  animation: jumper 1s 0s linear infinite;
-}
-
-#preloader .jumper > div:nth-child(2) {
-  -webkit-animation-delay: 0.33333s;
-  animation-delay: 0.33333s;
-}
-
-#preloader .jumper > div:nth-child(3) {
-  -webkit-animation-delay: 0.66666s;
-  animation-delay: 0.66666s;
-}
-
-@-webkit-keyframes jumper {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  }
-  5% {
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    opacity: 0;
+@media screen and (max-width: 768px) {
+  .lovee {
+    margin-top: 70px !important;
   }
 }
-
-@keyframes jumper {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0);
-    transform: scale(0);
+@media screen and (max-width: 576px) {
+  header {
+    display: none;
   }
-  5% {
-    opacity: 1;
+  .main-button-slider {
+    display: none;
   }
-  100% {
-    opacity: 0;
+  .bottom__Menu {
+    background-color: #e9e6e6;
+    height: 5em;
+    width: 100%;
+    position: fixed;
+    bottom: -18;
+    z-index: 9999999;
+    object-fit: contain;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 25px;
+  }
+  .home,
+  .pencil,
+  .mode-dark,
+  .email,
+  .setting {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .home a,
+  .pencil a,
+  .email a {
+    color: black !important;
+  }
+  .mode-dark {
+    padding: 10px;
+    border-radius: 100% !important;
+    position: relative;
+    bottom: 20%;
+  }
+  .lovee {
+    display: none;
   }
 }
