--- a/assets/css/templatemo-lava.css
+++ b/assets/css/templatemo-lava.css
@@ -744,7 +744,7 @@ welcome
   width: 100%;
   height: 100vh;
   min-height: 793px;
-  background-image: url(../images/banner-bg.png);
+  background-image: url(../images/banner-bgg.png);
   background-repeat: no-repeat;
   background-position: right top;
 }
@@ -1077,7 +1077,7 @@ footer
 footer {
   margin-top: 200px;
   padding-top: 120px;
-  background-image: url(../images/footer-bg.png);
+  background-image: url(../images/footer-bgg.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -1257,7 +1257,7 @@ footer .sub-footer p {
   .welcome-area {
     background-image: url(../images/logo.png);
   }
-  .warna{
+  .warna {
     background-color: aquamarine;
   }
   header {
@@ -1270,11 +1270,11 @@ footer .sub-footer p {
     margin-top: -70px !important;
   }
   .bottom__Menu {
-    background-color: #e9e6e6;
+    background-color: white;
     height: 5em;
     width: 100%;
     position: fixed;
-    bottom: -18;
+    bottom: -21px;
     z-index: 9999999;
     object-fit: contain;
     padding: 10px;
